--- a/PloxEngine/CMakeLists.txt
+++ b/PloxEngine/CMakeLists.txt
@@ -15,15 +15,18 @@ file(GLOB_RECURSE HEADERS ${SRC_DIR}/*.h)
 # Includes
 include_directories(${VENDOR_DIR}/include)
 
+find_package(Vulkan REQUIRED)
+message("Vulkan found: Version ${Vulkan_VERSION}")
+
 # Define Libraries
 set(LIBRARIES
         ${LIB_DIR}/EASTL.lib
-        ${LIB_DIR}/glfw3.lib)
+        Vulkan::Vulkan)
 
 # Binaries
 add_library(${PROJECT_NAME} STATIC ${SOURCES})
 
 # Linking
-target_link_libraries (${PROJECT_NAME} LINK_PUBLIC ${LIBRARIES})
-target_include_directories (${PROJECT_NAME} PUBLIC ${CMAKE_CURRENT_SOURCE_DIR}/src)
-target_include_directories (${PROJECT_NAME} PUBLIC ${VENDOR_DIR}/include)
+target_link_libraries(${PROJECT_NAME} LINK_PUBLIC ${LIBRARIES})
+target_include_directories(${PROJECT_NAME} PUBLIC ${CMAKE_CURRENT_SOURCE_DIR}/src)
+target_include_directories(${PROJECT_NAME} PUBLIC ${VENDOR_DIR}/include)
